add stylus but doesnt work as expected, yet

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -7,19 +7,21 @@
  *  Tags: tags
  */
 
-@import "compass";
-@import "variables";
-@import "libs/normalize";
-@import "fonts";
-@import "base";
-@import "grid";
-@import "layout";
-@import "buttons";
-@import "forms";
-@import "ui";
-@import "pages";
-@import "media";
+// @import "compass";
+// @import "variables";
+@import "libs/normalize.css";
+// @import "fonts";
+// @import "base";
+// @import "grid";
+// @import "layout";
+// @import "buttons";
+// @import "forms";
+// @import "ui";
+// @import "pages";
+// @import "media";
 
-@import "ie";
+// @import "ie";
 
+body
+  font-size: 1em
 
