idea for adding wordpress theme banner to resulting css but not finished

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -7,9 +7,10 @@
  *  Tags: tags
  */
 
+@import 'nib'
 // @import "compass";
 // @import "variables";
-@import "libs/normalize.css";
+@import 'libs/normalize'
 // @import "fonts";
 // @import "base";
 // @import "grid";
