--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -1,14 +1,4 @@
-/**
- *  Theme Name: GruntJS Example
- *  Theme URI: http://some_url.com
- *  Description: some desc
- *  Version: 1.0
- *  Author: author
- *  Tags: tags
- */
-
 @import 'nib'
-// @import "compass";
 // @import "variables";
 @import 'libs/normalize'
 // @import "fonts";
@@ -25,4 +15,5 @@
 
 body
   font-size: 1em
+  line-height: 1.5em
 
